--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.16.1",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
