--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,20 +1,24 @@
 ci/cd:
 - changed-files:
-  - any-glob-to-any-files: .github/*
-  - all-globs-to-all-files: ['!.github/PULL_REQUEST_TEMPLATE.md', '!.github/semantic.yml', '!.github/labeler.yml', '!.github/workflows/pr-labeler.yml', '!.github/workflows/pr-semantic.yml']
+  - any-glob-to-any-files: .github/**
+  - all-globs-to-all-files: ['!.github/PULL_REQUEST_TEMPLATE.md', '!.github/labeler.yml', '!.github/workflows/pr-labeler.yml']
 
 tables:
 - changed-files:
-  - any-glob-to-any-files: prisma/*
+  - any-glob-to-any-files: prisma/**
 
 crud:
 - changed-files:
-  - any-glob-to-any-files: src/*
+  - any-glob-to-any-files: src/**
 
 tests:
 - changed-files:
-  - any-glob-to-any-files: test/*
+  - any-glob-to-any-files: test/**
 
 gitWorkflow:
 - changed-files:
-  - all-globs-to-all-files: ['.github/PULL_REQUEST_TEMPLATE.md', '.github/semantic.yml', '.github/labeler.yml', '.github/workflows/pr-labeler.yml', '.github/workflows/pr-semantic.yml']
+  - all-globs-to-all-files: ['.github/PULL_REQUEST_TEMPLATE.md', '.github/labeler.yml', '.github/workflows/pr-labeler.yml']
+
+Documentation:
+- changed-files:
+  - any-glob-to-any-files: '**/*.md'
