--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -36,15 +36,15 @@ jobs:
             sizes: >
               {
                 "0": "XS",
-                "30": "S",
+                "20": "S",
                 "50": "M",
-                "100": "L",
-                "250": "XL"
+                "200": "L",
+                "500": "XL"
               }
 
   comment:
     runs-on: ubuntu-latest
     needs: size-label
-    if: ${{ contains(needs.size-label.outputs.label, 'XS') }}
+    if: ${{ contains(needs.size-label.outputs.label, 'XL') }}
     steps:
-      - run: echo "Too short PR"    
+      - run: echo "Too big PR"    
