--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.10.0",
+    "express-rate-limit": "^7.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
