--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.16.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cookie-parser": "^1.4.6",
-    "csurf": "^1.10.0",
+    "cookie-parser": "^1.4.7",
     "express-rate-limit": "^7.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
