--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,24 +1,22 @@
 ci/cd:
-- changed-files:
-  - any-glob-to-any-files: .github/**
-  - all-globs-to-all-files: ['!.github/PULL_REQUEST_TEMPLATE.md', '!.github/labeler.yml', '!.github/workflows/pr-labeler.yml']
+  - '.github/**'
+  - '! .github/PULL_REQUEST_TEMPLATE.md'
+  - '! .github/labeler.yml'
+  - '! .github/workflows/pr-labeler.yml'
 
 tables:
-- changed-files:
-  - any-glob-to-any-files: prisma/**
+  - 'prisma/**'
 
 crud:
-- changed-files:
-  - any-glob-to-any-files: src/**
+  - 'src/**'
 
 tests:
-- changed-files:
-  - any-glob-to-any-files: test/**
+  - 'test/**'
 
 gitWorkflow:
-- changed-files:
-  - all-globs-to-all-files: ['.github/PULL_REQUEST_TEMPLATE.md', '.github/labeler.yml', '.github/workflows/pr-labeler.yml']
+  - '.github/PULL_REQUEST_TEMPLATE.md'
+  - '.github/labeler.yml'
+  - '.github/workflows/pr-labeler.yml'
 
 Documentation:
-- changed-files:
-  - any-glob-to-any-files: '**/*.md'
+  - '**/*.md'
