--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -16,4 +16,6 @@ tests:
 
 Documentation:
 - changed-files:
-  - any-glob-to-any-file: '**/*.md'
+  - any-glob-to-any-file: 
+    - '**/*.md'
+    - 'docs/**'
