feat: YL-19 Pull request template updated + root added in labels

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -19,3 +19,7 @@ Documentation:
   - any-glob-to-any-file: 
     - '**/*.md'
     - 'docs/**'
+
+Root:
+- changed-files:
+  - any-glob-to-any-file: '*'
