--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # .codegpt folder
 .codegpt
+
+# temporary session files, unique to each instance of PgAdmin
+pgadmin/sessions/
