--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Tous les fichiers doivent être approuvés par @C-Alexis4414 et @accardigianni
-* @C-Alexis4414 @accardigianni 
+* @C-Alexis4414 @accardigianni @AndreaBacquele
