--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -18,7 +18,11 @@ jobs:
           run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
         - name: Build the Docker image
           run: |
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/youllinkbackend:latest .
+            IMAGE_TAG=${GITHUB_SHA::7}
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:$IMAGE_TAG .
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:latest .
         - name: Push image to Docker Hub
           run: |
-            docker push ${{ secrets.DOCKER_USERNAME }}/youllinkbackend:latest
+            IMAGE_TAG=${GITHUB_SHA::7}
+            docker push ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:$IMAGE_TAG          
+            docker push ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:latest
