--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   postgres:
     container_name: postgres
     image: postgres:latest
-    # env_file:
-    #   - .env  # Charge toutes les variables du fichier .env
+    env_file:
+      - .env  # Charge toutes les variables du fichier .env
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PW}
@@ -12,6 +12,8 @@ services:
       - "5432:5432"
     networks:
         - youlink_network
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
 
   backend:
@@ -32,8 +34,8 @@ services:
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4:latest
-    # env_file:
-    #   - .env  # Charge aussi les variables pour pgAdmin
+    env_file:
+      - .env  # Charge aussi les variables pour pgAdmin
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_MAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PW}
@@ -44,14 +46,14 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./pgadmin:/var/lib/pgadmin
-      - ./pgadmin/YoulinkServer.json:/pgadmin4/servers.json:ro # Load the file with the server configuration
-      - ./pgadmin/pgpass:/pgadmin4/pgpass:ro # Flag read-only to prevent accidental modification
-      - ./entrypoint.sh:/docker-entrypoint-initdb.d/entrypoint.sh
-    entrypoint: ["/docker-entrypoint-initdb.d/entrypoint.sh"]
-    command: ["pgadmin"]
+      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin/YoulinkServer.json:/pgadmin4/YoulinkServer.json
     restart: unless-stopped
 
 networks:
   youlink_network:
     driver: bridge
+
+volumes:
+  postgres_data:
+  pgadmin_data:
