--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # temporary session files, unique to each instance of PgAdmin
 pgadmin/sessions/
+
+# CODEOWNERS
+.github/CODEOWNERS
