--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -29,6 +29,25 @@ jobs:
     - name: Run Prettier check
       run: npm run prettier --check
 
+  type-check:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 22
+
+    - name: Install dependancies
+      run: npm ci
+
+    - name: Run TypeScript type check
+      run: npm run type-check
+
   build:
 
     runs-on: ubuntu-latest
