ci: YL-102 Integration of build-docker in CI & various

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,3 +4,11 @@ npm-debug.log
 dist
 .codegpt
 pgadmin/sessions/
+*.spec.ts
+test/
+prisma/seed/seed.ts
+coverage/
+.git
+.gitignore
+Dockerfile*
+docker-compose*.yml
