--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -7,22 +7,38 @@ on:
 
 jobs:
 
-    build:
+    build-and-push:
 
         runs-on: ubuntu-latest
 
         steps:
         - name: Checkout
           uses: actions/checkout@v4
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+
         - name: Log in to Docker Hub
-          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        - name: Build the Docker image
-          run: |
-            IMAGE_TAG=${GITHUB_SHA::7}
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:$IMAGE_TAG .
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:latest .
-        - name: Push image to Docker Hub
-          run: |
-            IMAGE_TAG=${GITHUB_SHA::7}
-            docker push ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:$IMAGE_TAG          
-            docker push ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:latest
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+
+        - name: Build and push backend image
+          uses: docker/build-push-action@v6
+          with:
+            push: true
+            platforms: linux/amd64,linux/arm64
+            tags: |
+              ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:latest
+              ${{ secrets.DOCKER_USERNAME }}/youlinkbackend:${{ github.sha }}
+
+    test-compose:
+
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v4
+        - run: docker compose up -d
+        - run: sleep 10
+        - run: curl -f http://localhost:3000/health
