--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "start:prod": "node dist/main",
     "lint": "eslint . --ext .ts --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .ts --fix",
-    "test": "jest --config jest.config.ts",
+    "test:all": "npm run test:unit && npm run test:e2e",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:unit": "jest --config jest.config.ts",
     "test:e2e": "jest --config jest.e2e.config.ts",
     "prepare": "husky",
     "type-check": "tsc --noEmit"
