--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -84,7 +84,7 @@ jobs:
       run: npm ci
 
     - name: Run test with coverage
-      run: npm run test -- --coverage
+      run: npm run test:all -- --coverage
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
