ci: YL-102 test-seed for the CI test

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -117,7 +117,7 @@ jobs:
     - name: Seed test DB
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
-      run: npx ts-node prisma/seed/seed.ts
+      run: npx ts-node prisma/seed/test-seed.ts
 
     - name: Run test with coverage
       env:
