--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -119,6 +119,11 @@ jobs:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
       run: npx ts-node prisma/seed/test-seed.ts
 
+    - name: Reset DB before tests
+      env:
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+      run: npx prisma migrate reset --force --seed
+
     - name: Run test with coverage
       env:
           JWT_SECRET: test-secret
