--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "prisma": {
-    "seed": "tsx prisma/seed/seed.ts",
+    "seed": "ts-node prisma/seed/seed.ts",
     "schema": "prisma/schema.prisma"
   },
   "author": "",
