--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -7,6 +7,19 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  gitguardian:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Scan for secrets with GitGuardian
+      uses: GitGuardian/ggshield-action@v1
+      with:
+        args: secret scan --all
+      env:
+        GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+
   lint:
 
     runs-on: ubuntu-latest
@@ -24,10 +37,10 @@ jobs:
       run: npm ci
 
     - name: Run ESLint
-      run: npm run lint
+      run: npm run lint:fix
 
     - name: Run Prettier check
-      run: npm run prettier --check
+      run: npm run format
 
   type-check:
 
