--- a/.gitguardian.yml
+++ b/.gitguardian.yml
@@ -1,13 +1,19 @@
-version: 1
+version: 2
 secret:
-  ignore:
-    - name: "JWT test secret"
-      match: "test-secret"
-    - name: "Test user email"
-      match: "j-b.goode@youlink.com"
-    - name: "Test user name"
-      match: "testUser"
-    - name: "Test tag channel"
-      match: "testuser1234"
-    - name: "Test user LinkedIn"
-      match: "https://www.linkedin.com/in/test-user/"
+  ignored_paths:
+    - 'test/*'
+    - '*.spec.ts'
+    - '*.e2e-spec.ts'
+    - .env
+    - .env.test
+  ignored_matches:
+    - name: JWT test secret
+      match: test-secret
+    - name: Test user email
+      match: j-b.goode@youlink.com
+    - name: Test user name
+      match: testUser
+    - name: Test tag channel
+      match: testuser1234
+    - name: Test user LinkedIn
+      match: https://www.linkedin.com/in/test-user/
