--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -1,139 +1,134 @@
 name: Lint, build & test
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: ['main']
+    pull_request:
+        branches: ['main']
 
 jobs:
+    lint:
+        runs-on: ubuntu-latest
 
-  lint:
+        steps:
+            - name: Checkout repo
+              uses: actions/checkout@v4
 
-    runs-on: ubuntu-latest
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22
 
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+            - name: Install dependancies
+              run: npm ci
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
+            - name: Run ESLint
+              run: npm run lint
 
-    - name: Install dependancies
-      run: npm ci
+            - name: Run Prettier check
+              run: npm run format:check
 
-    - name: Run ESLint
-      run: npm run lint
+    type-check:
+        runs-on: ubuntu-latest
 
-    - name: Run Prettier check
-      run: npm run format:check
+        steps:
+            - name: Checkout repo
+              uses: actions/checkout@v4
 
-  type-check:
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22
 
-    runs-on: ubuntu-latest
+            - name: Install dependancies
+              run: npm ci
 
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+            - name: Run TypeScript type check
+              run: npm run type-check
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
+    build:
+        runs-on: ubuntu-latest
 
-    - name: Install dependancies
-      run: npm ci
+        steps:
+            - name: Checkout repo
+              uses: actions/checkout@v4
 
-    - name: Run TypeScript type check
-      run: npm run type-check
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22
 
-  build:
+            - name: Install dependancies
+              run: npm ci
 
-    runs-on: ubuntu-latest
+            - name: Run build
+              run: npm run build
 
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+    test:
+        runs-on: ubuntu-latest
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
+        services:
+            postgres:
+                image: postgres:16
+                ports:
+                    - 5432:5432
+                env:
+                    POSTGRES_USER: postgres
+                    POSTGRES_PASSWORD: postgres
+                    POSTGRES_DB: testdb
+                options: >-
+                    --health-cmd="pg_isready -U postgres"
+                    --health-interval=10s
+                    --health-timeout=5s
+                    --health-retries=5
 
-    - name: Install dependancies
-      run: npm ci
+        steps:
+            - name: Checkout repo
+              uses: actions/checkout@v4
 
-    - name: Run build
-      run: npm run build
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22
+                  cache: 'npm'
 
-  test:
+            - name: Install dependancies
+              run: npm ci
 
-    runs-on: ubuntu-latest
+            - name: Wait for Postgres
+              run: |
+                  until pg_isready -h localhost -p 5432 -U postgres; do
+                    echo "Waiting for postgres..."
+                    sleep 2
+                  done
 
-    services:
-      postgres:
-        image: postgres:16
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: testdb
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+            - name: Prisma generate
+              run: npx prisma generate
 
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+            - name: Push schema to test DB
+              env:
+                  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+              run: npx prisma db push
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
-        cache: 'npm'
+            - name: Reset DB before tests
+              env:
+                  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+              run: npx prisma migrate reset --force --skip-generate --skip-seed
 
-    - name: Install dependancies
-      run: npm ci
+            - name: Seed test DB
+              env:
+                  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+              run: npx ts-node prisma/seed/test-seed.ts
 
-    - name: Wait for Postgres
-      run: |
-        until pg_isready -h localhost -p 5432 -U postgres; do
-          echo "Waiting for postgres..."
-          sleep 2
-        done
+            - name: Run test with coverage
+              env:
+                  JWT_SECRET: test-secret
+                  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+              run: npm run test:all -- --coverage
 
-    - name: Prisma generate
-      run: npx prisma generate
-
-    - name: Push schema to test DB
-      env:
-        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
-      run: npx prisma db push
-      
-    - name: Reset DB before tests
-      env:
-        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
-      run: npx prisma migrate reset --force --skip-generate --skip-seed
-
-    - name: Seed test DB
-      env:
-        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
-      run: npx ts-node prisma/seed/test-seed.ts
-
-    - name: Run test with coverage
-      env:
-          JWT_SECRET: test-secret
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
-      run: npm run test:all -- --coverage
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report
-        path: coverage/
-        retention-days: 7
+            - name: Upload coverage report
+              uses: actions/upload-artifact@v4
+              with:
+                  name: coverage-report
+                  path: coverage/
+                  retention-days: 7
