--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -1,50 +1,48 @@
-name: "Pull Request Labeler"
+name: 'Pull Request Labeler'
 
-on: 
-- pull_request_target
+on:
+    - pull_request_target
 
 jobs:
-  labeler:
+    labeler:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            pull-requests: write
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
+        steps:
+            - uses: actions/labeler@v5
+              with:
+                  repo-token: '${{ secrets.YLB_ACSEC }}'
 
-    steps:
-    - uses: actions/labeler@v5
-      with:
-        repo-token: "${{ secrets.YLB_ACSEC }}"
+    size-label:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            pull-requests: write
 
-  size-label:
+        outputs:
+            label: ${{ steps.label.outputs.sizeLabel }}
 
-      runs-on: ubuntu-latest
-      permissions:
-        contents: read
-        pull-requests: write
+        steps:
+            - name: size-label
+              id: label
+              uses: 'pascalgn/size-label-action@v0.5.4'
+              env:
+                  GITHUB_TOKEN: '${{ secrets.YLB_ACSEC }}'
+              with:
+                  sizes: >
+                      {
+                        "0": "XS",
+                        "20": "S",
+                        "50": "M",
+                        "200": "L",
+                        "500": "XL"
+                      }
 
-      outputs:
-        label: ${{ steps.label.outputs.sizeLabel }}
-
-      steps:
-        - name: size-label
-          id: label
-          uses: "pascalgn/size-label-action@v0.5.4"
-          env:
-            GITHUB_TOKEN: "${{ secrets.YLB_ACSEC }}"
-          with:
-            sizes: >
-              {
-                "0": "XS",
-                "20": "S",
-                "50": "M",
-                "200": "L",
-                "500": "XL"
-              }
-
-  comment:
-    runs-on: ubuntu-latest
-    needs: size-label
-    if: ${{ contains(needs.size-label.outputs.label, 'XL') }}
-    steps:
-      - run: echo "Too big PR"    
+    comment:
+        runs-on: ubuntu-latest
+        needs: size-label
+        if: ${{ contains(needs.size-label.outputs.label, 'XL') }}
+        steps:
+            - run: echo "Too big PR"
