--- a/package.json
+++ b/package.json
@@ -1,107 +1,107 @@
 {
-  "name": "Links-to-Experts-Back",
-  "version": "0.0.1",
-  "description": "",
-  "prisma": {
-    "seed": "ts-node prisma/seed/seed.ts",
-    "schema": "prisma/schema.prisma"
-  },
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write",
-    "format:check": "prettier --check",
-    "start": "nest start",
-    "dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint . --ext .ts --ignore-path .gitignore",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "test:all": "npm run test:unit && npm run test:e2e",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:unit": "jest --config jest.config.ts",
-    "test:e2e": "jest --config jest.e2e.config.ts",
-    "prepare": "husky",
-    "type-check": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.3.1",
-    "@prisma/client": "^5.16.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/passport": "^1.0.16",
-    "@types/passport-jwt": "^4.0.1",
-    "axios": "^1.7.5",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cookie-parser": "^1.4.7",
-    "express-rate-limit": "^7.4.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@snaplet/copycat": "^5.0.0",
-    "@snaplet/seed": "^0.97.20",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.14.9",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.2",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^9.1.7",
-    "jest": "^29.5.0",
-    "lint-staged": "^16.1.4",
-    "prettier": "^3.0.0",
-    "prisma": "^5.16.1",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.16.0",
-    "typescript": "^5.5.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+    "name": "Links-to-Experts-Back",
+    "version": "0.0.1",
+    "description": "",
+    "prisma": {
+        "seed": "ts-node prisma/seed/seed.ts",
+        "schema": "prisma/schema.prisma"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
-  "@snaplet/seed": {
-    "config": "prisma\\seed\\seed.config.ts"
-  }
+    "author": "",
+    "private": true,
+    "license": "UNLICENSED",
+    "scripts": {
+        "build": "nest build",
+        "format": "prettier --write .",
+        "format:check": "prettier --check",
+        "start": "nest start",
+        "dev": "nest start --watch",
+        "start:debug": "nest start --debug --watch",
+        "start:prod": "node dist/main",
+        "lint": "eslint . --ext .ts --ignore-path .gitignore",
+        "lint:fix": "eslint . --ext .ts --fix",
+        "test:all": "npm run test:unit && npm run test:e2e",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:unit": "jest --config jest.config.ts",
+        "test:e2e": "jest --config jest.e2e.config.ts",
+        "prepare": "husky",
+        "type-check": "tsc --noEmit"
+    },
+    "dependencies": {
+        "@nestjs/common": "^10.0.0",
+        "@nestjs/config": "^3.2.2",
+        "@nestjs/core": "^10.0.0",
+        "@nestjs/jwt": "^10.2.0",
+        "@nestjs/passport": "^10.0.3",
+        "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/swagger": "^7.3.1",
+        "@prisma/client": "^5.16.1",
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/passport": "^1.0.16",
+        "@types/passport-jwt": "^4.0.1",
+        "axios": "^1.7.5",
+        "bcrypt": "^5.1.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
+        "cookie-parser": "^1.4.7",
+        "express-rate-limit": "^7.4.0",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
+        "reflect-metadata": "^0.2.0",
+        "rxjs": "^7.8.1"
+    },
+    "devDependencies": {
+        "@nestjs/cli": "^10.0.0",
+        "@nestjs/schematics": "^10.0.0",
+        "@nestjs/testing": "^10.0.0",
+        "@snaplet/copycat": "^5.0.0",
+        "@snaplet/seed": "^0.97.20",
+        "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.2",
+        "@types/node": "^20.14.9",
+        "@types/supertest": "^6.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.2",
+        "eslint-import-resolver-typescript": "^4.4.4",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-prettier": "^5.5.4",
+        "husky": "^9.1.7",
+        "jest": "^29.5.0",
+        "lint-staged": "^16.1.4",
+        "prettier": "^3.0.0",
+        "prisma": "^5.16.1",
+        "source-map-support": "^0.5.21",
+        "supertest": "^6.3.4",
+        "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.3",
+        "ts-node": "^10.9.2",
+        "tsconfig-paths": "^4.2.0",
+        "tsx": "^4.16.0",
+        "typescript": "^5.5.2"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
+        "rootDir": "src",
+        "testRegex": ".*\\.spec\\.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "collectCoverageFrom": [
+            "**/*.(t|j)s"
+        ],
+        "coverageDirectory": "../coverage",
+        "testEnvironment": "node"
+    },
+    "@snaplet/seed": {
+        "config": "prisma\\seed\\seed.config.ts"
+    }
 }
