cd: YL-103 Preparing Dockerfile with stage, isProd var & secure for cookie

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,15 @@
 node_modules
 npm-debug.log
 .env
+.env.test
 dist
 .codegpt
-pgadmin/sessions/
 *.spec.ts
-test/
+*.e2e-spec.ts
+test
 prisma/seed/seed.ts
-coverage/
+prisma/seed/test-seed.ts
+coverage
 .git
 .gitignore
-Dockerfile*
 docker-compose*.yml
