--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "format": "prettier --write .",
         "format:check": "prettier --check",
         "start": "nest start",
-        "dev": "nest start --watch",
+        "dev": "NODE_ENV=development nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
+        "start:prod": "NODE_ENV=production node dist/src/main.js",
         "lint": "eslint . --ext .ts --ignore-path .gitignore",
         "lint:fix": "eslint . --ext .ts --fix",
         "test:all": "npm run test:unit && npm run test:e2e",
@@ -47,6 +47,7 @@
         "class-validator": "^0.14.1",
         "cookie-parser": "^1.4.7",
         "express-rate-limit": "^7.4.0",
+        "helmet": "^8.1.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
