--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
         volumes:
             - .:/app
             - /app/node_modules
+            - /app/dist
+            - /app/coverage
         ports:
             - '3000:3000'
         networks:
