--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "@types/passport": "^1.0.16",
         "@types/passport-jwt": "^4.0.1",
         "axios": "^1.7.5",
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^3.0.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cookie-parser": "^1.4.7",
