cd: Deploy workflow added & https url configured

--- a/.gitignore
+++ b/.gitignore
@@ -67,4 +67,4 @@ pgadmin/sessions/
 .github/CODEOWNERS
 
 # Workflows temporarily
-.github/workflows/deploy-railway.yml
+# .github/workflows/deploy-railway.yml
