cd: YL-104 correct name of the service to be deployed via Railway's CLI in the job

--- a/.github/workflows/deploy-railway.yml
+++ b/.github/workflows/deploy-railway.yml
@@ -17,9 +17,9 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Install Railway CLI
-              run: npm install -g railway
+              run: npm install -g @railway/cli
 
             - name: Deploy to Railway
-              run: railway up --service youlink-api
+              run: railway up --service Links-to-Experts-Back
               env: 
                 RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
