--- a/.github/workflows/deploy-railway.yml
+++ b/.github/workflows/deploy-railway.yml
@@ -22,4 +22,4 @@ jobs:
             - name: Deploy to Railway
               run: railway up --service Links-to-Experts-Back
               env: 
-                RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+                RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
