cd: YL-104 test by passing railway_token without adding the login command

--- a/.github/workflows/deploy-railway.yml
+++ b/.github/workflows/deploy-railway.yml
@@ -23,3 +23,4 @@ jobs:
               run: railway up --service Links-to-Experts-Back
               env: 
                 RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+                RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
