--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@railway/cli": "^4.6.3",
         "@snaplet/copycat": "^5.0.0",
         "@snaplet/seed": "^0.97.20",
         "@types/express": "^4.17.17",
