cd: YL-104 Attempt without --browserless for login

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -145,8 +145,8 @@ jobs:
             - name: Install Railway CLI
               run: npm install -g @railway/cli
 
-            - name: Railway login (browserless)
-              run: npx railway login --browserless
+            - name: Railway login
+              run: npx railway login
               env:
                 RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
