--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -147,5 +147,5 @@ jobs:
 
             - name: Deploy to Railway
               env: 
-                RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+                RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
               run: npx railway up --service Links-to-Experts-Back -c
