--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -141,7 +141,6 @@ jobs:
         container: ghcr.io/railwayapp/cli:latest
 
         env:
-          SVC_ID: Links-to-Experts-Back
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
         steps:
@@ -149,4 +148,4 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Deploy to Railway
-              run: npx railway up --service={{ env.SVC_ID }}
+              run: npx railway up --service Links-to-Experts-Back
