--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -149,4 +149,4 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Deploy to Railway
-              run: railway up --service={{ env.SVC_ID }}
+              run: railway up --service=${{ env.SVC_ID }}
