--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -130,14 +130,11 @@ jobs:
                   DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
               run: npm run test:all -- --coverage
 
-            - name: List workspace
-              run: ls -R
-
             - name: Upload coverage report
               uses: actions/upload-artifact@v4
               with:
                   name: coverage-report
-                  path: coverage/lcov-report
+                  path: coverage/
                   retention-days: 7
 
     build-and-push-docker-image:
