fix(deps): Deployment on main with push trigger

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -167,6 +167,8 @@ jobs:
     deploy:
         needs: build-and-push-docker-image
 
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
         runs-on: ubuntu-latest
 
         container: ghcr.io/railwayapp/cli:latest
